PVAClone package version history

Version 0.1-2, September 30, 2012
    * fixed argument in growth model functions can be a list.

Version 0.1-1, August 23, 2012
    * Songsparrow data added.
    * Theta-Logistic, Theta-Logistic-D and Generalized 
      Beverton-Holt growth models added.
    * Testing and cleanup with minor modifications to the
      model selection facility.

Version 0.1-0, June 28, 2012
    * Package with model fitting and model selection capabilities
      is ready for 1st CRAN submission. Gompertz and Ricker
      growth models are implemented.